# review_site

./: .env.example  .gitignore  Dockerfile  README.md  Session.vim  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 11e3f1495dfc_first.py  9766c08aff14_.py  e2ed836a6475_.py  f594742b2f50_.py
app/: main.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  course.py  solutions.py  tasks.py  user.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/crud/: __init__.py  base.py  course.py  solutions.py  tasks.py  user.py
app/models/: __init__.py  course.py  task.py  user.py
app/schemas/: course.py  tasks.py  user.py
app/services/: __init__.py  unzipping.py
tests/: conftest.py
