[tool.poetry]
name = "review-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
fastapi = "^0.104.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
